<resources>
    <string name="app_name">MyChildParent</string>
    <string name="title_kid">Ваш Ребёнок</string>
    <string name="title_billing">Счета</string>
    <string name="title_profile">Ваш Профиль</string>
    <string name="title_settings">Настройки</string>
    <string name="child">Ребёнок</string>
    <string name="profile">Профиль</string>
    <string name="bill_text">Счёт #</string>
    <string name="events">События</string>
    <string name="name_title_text">Имя</string>
    <string name="patronymic_title_text">Отчество</string>
    <string name="surname_title_text">Фамилия</string>
    <string name="kid_age_title_text">Возраст</string>
    <string name="kid_locker_title_text">Шкафчик</string>
    <string name="kid_blood_type_title_text">Группа Крови</string>
    <string name="parent_role_title_text">Степень Родства</string>
    <string name="parent_kid_title_text">Ребёнок</string>
    <string name="parent_phone_num_title_text">Телефон</string>
    <string name="cancel_button">Отмена</string>
    <string name="ok_button">Ок</string>
    <string name="billing_target_default_text">Всей Группе</string>
    <string name="bill_status_true">Оплачен</string>
    <string name="bill_status_false">Неоплачен</string>
    <string name="bill_theme_title_text">Категория</string>
    <string name="bill_price_title_text">Сумма, руб.</string>
    <string name="bill_target_title_text">Ребёнок</string>
    <string name="bill_description_title">Комментарий</string>
    <string name="save_btn_text">Сохранить</string>
    <string name="delete_btn_text">Удалить</string>
    <string name="bill_status_title_text">Статус</string>
    <string name="schedule_container_tv_text">Отметки Присутствия</string>
    <string name="schedule_arrive_text">Пришёл</string>
    <string name="schedule_leave">Ушёл</string>
    <string name="event_date_text">Дата События</string>
    <string name="eating_container_tv_text">Приём Пищи</string>
    <string name="other_text">Другое</string>
    <string name="sleep_end_text">Проснулся</string>
    <string name="sleep_start_text">Заснул</string>
    <string name="sleeping_text">Сон</string>
    <string name="eating_denial_text">Отказ От Пищи</string>
    <string name="eating_food_text">Рацион</string>
    <string name="eating_event_text">Событие</string>
    <string name="event_children_list_container_text">Выберите ребёнка, чтобы добавить событие</string>
    <string name="invite_code_title_text">Инвайт</string>
    <string name="kids_null_text">В группе никого нет…</string>
    <string name="back_btn_text">Назад</string>
    <string name="meal_list_tv_text">Список Блюд</string>
    <string name="delete_bill_title">Удалить Счёт</string>
    <string name="delete_bill_message">Вы действительно хотите удалить этот счёт?</string>
    <string name="logout_text">Выйти</string>
    <string name="logout_message">Вы действительно хотите выйти из приложения?</string>
    <string name="delete_meal_title">Удалить Блюдо</string>
    <string name="delete_meal_message">Вы действительно хотите удалить это блюдо?</string>
    <string name="new_meal_title">Новое Блюдо</string>
    <string name="new_meal_text">Новое блюдо</string>
    <string name="new_kid_title">Новый Ребёнок</string>
    <string name="some_field_is_null">Не указано</string>
    <string name="event_open_tv_text">Показать события</string>
    <string name="login_title">Вход</string>
    <string name="register_title">Регистрация</string>
    <string name="login_text">Логин</string>
    <string name="password_text">Пароль</string>
    <string name="login_btn_text">Войти</string>
    <string name="password_repeat_text">Подтвердите пароль</string>
    <string name="login_nav_tv_text">У меня уже есть аккаунт</string>
    <string name="register_btn_text">Зарегистрироваться</string>
    <string name="empty_input">Вы не указали значение!</string>
    <string name="auth_header_key">Authorization</string>
    <string name="no_picture_url">http://82.148.31.234:8000/photos/placeholder.jpg</string>
    <string name="parent_profile">parent</string>
    <string name="picture_update_success">Фотография успешно обновлена!</string>
    <string name="delete_picture_title">Удалить Фотографию</string>
    <string name="delete_picture_message">Вы действительно хотите удалить эту фотографию?</string>
    <string name="kid_add_instruction">Введите пригласительный номер, чтобы добавить своего ребёнка. Для получения номера обратитесь к воспитателю.</string>
    <string name="kid_add_ed_text">Пригласительный номер</string>
    <string name="kid_add_btn_text">Добавить ребёнка</string>
    <string name="breakfast">Завтрак</string>
    <string name="lunch">Обед</string>
    <string name="snack">Полдник</string>
    <string name="bill_container_title">Ваш Счёт</string>
    <string name="title_gallery">Галерея</string>
    <string name="null_description">Нет описания</string>
</resources>
