<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_kid">

    <fragment
        android:id="@+id/navigation_kid"
        android:name="com.djaphar.babysitterparent.Fragments.KidFragment"
        android:label="@string/title_kid"
        tools:layout="@layout/fragment_kid" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.djaphar.babysitterparent.Fragments.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.djaphar.babysitterparent.Fragments.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>
