<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/billing_list_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/screen_horizontal_padding"
        android:paddingEnd="@dimen/screen_horizontal_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/billing_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bill_info_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorTinyGrey"
        android:elevation="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:id="@+id/bill_sv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <LinearLayout
                    android:id="@+id/bill_theme_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/screen_horizontal_padding"
                    android:paddingEnd="@dimen/screen_horizontal_padding"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/info_row_vertical_margin"
                        android:layout_marginBottom="@dimen/info_row_vertical_margin"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto"
                        android:text="@string/bill_theme_title_text"
                        android:textColor="@color/colorBlack87"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/bill_theme_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/info_row_vertical_margin"
                        android:layout_marginBottom="@dimen/info_row_vertical_margin"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="end"
                        android:textColor="@color/colorBlack87"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/bill_price_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/thin_top_border"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/screen_horizontal_padding"
                    android:paddingEnd="@dimen/screen_horizontal_padding"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bill_theme_container">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/info_row_vertical_margin"
                        android:layout_marginBottom="@dimen/info_row_vertical_margin"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto"
                        android:text="@string/bill_price_title_text"
                        android:textColor="@color/colorBlack87"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/bill_price_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/info_row_vertical_margin"
                        android:layout_marginBottom="@dimen/info_row_vertical_margin"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="end"
                        android:textColor="@color/colorBlack87"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/bill_status_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/thin_top_border"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/screen_horizontal_padding"
                    android:paddingEnd="@dimen/screen_horizontal_padding"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bill_price_container">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/info_row_vertical_margin"
                        android:layout_marginBottom="@dimen/info_row_vertical_margin"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto"
                        android:text="@string/bill_status_title_text"
                        android:textColor="@color/colorBlack87"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/bill_status_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/info_row_vertical_margin"
                        android:layout_marginBottom="@dimen/info_row_vertical_margin"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="end"
                        android:textColor="@color/colorBlack87"
                        android:textSize="18sp" />

                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/thin_top_border"
                    android:paddingStart="@dimen/screen_horizontal_padding"
                    android:paddingEnd="@dimen/screen_horizontal_padding"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bill_status_container">

                    <TextView
                        android:id="@+id/bill_description_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/info_row_vertical_margin"
                        android:fontFamily="@font/roboto"
                        android:text="@string/bill_description_title"
                        android:textColor="@color/colorBlack87"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/bill_description_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/roboto_medium"
                        android:textColor="@color/colorBlack60"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/bill_description_title" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>