<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ProfileFragment">

    <ScrollView
        android:id="@+id/parent_info_sv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <ImageView
                android:id="@+id/parent_photo"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/delete_picture_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/round_red_button"
                android:src="@drawable/ic_delete_black_24dp"
                android:tint="@color/colorWhite"
                android:translationY="-30dp"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@id/select_picture_btn"
                app:layout_constraintTop_toBottomOf="@id/parent_photo"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/cancel_picture_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/round_grey_button"
                android:src="@drawable/ic_close_black_24dp"
                android:tint="@color/colorWhite"
                android:translationY="-30dp"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/save_picture_btn"
                app:layout_constraintTop_toBottomOf="@+id/parent_photo"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/select_picture_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_button"
                android:src="@drawable/ic_create_black_24dp"
                android:tint="@color/colorWhite"
                android:translationY="-30dp"
                app:layout_constraintEnd_toEndOf="@id/parent_photo"
                app:layout_constraintTop_toBottomOf="@id/parent_photo"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/save_picture_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_button"
                android:src="@drawable/ic_check_black_24dp"
                android:tint="@color/colorWhite"
                android:translationY="-30dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/parent_photo"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:id="@+id/parent_name_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:paddingStart="@dimen/screen_horizontal_padding"
                android:paddingEnd="@dimen/screen_horizontal_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/parent_photo">

                <TextView
                    android:id="@+id/parent_name_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/info_row_vertical_margin"
                    android:layout_marginBottom="@dimen/info_row_vertical_margin"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:text="@string/name_title_text"
                    android:textColor="@color/colorBlack87"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/parent_name_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/info_row_vertical_margin"
                    android:layout_marginBottom="@dimen/info_row_vertical_margin"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="end"
                    android:textColor="@color/colorBlack87"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/parent_patronymic_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/thin_top_border"
                android:orientation="horizontal"
                android:paddingStart="@dimen/screen_horizontal_padding"
                android:paddingEnd="@dimen/screen_horizontal_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/parent_name_container">

                <TextView
                    android:id="@+id/parent_patronymic_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/info_row_vertical_margin"
                    android:layout_marginBottom="@dimen/info_row_vertical_margin"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:text="@string/patronymic_title_text"
                    android:textColor="@color/colorBlack87"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/parent_patronymic_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/info_row_vertical_margin"
                    android:layout_marginBottom="@dimen/info_row_vertical_margin"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="end"
                    android:textColor="@color/colorBlack87"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/parent_surname_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/thin_top_border"
                android:orientation="horizontal"
                android:paddingStart="@dimen/screen_horizontal_padding"
                android:paddingEnd="@dimen/screen_horizontal_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/parent_patronymic_container">

                <TextView
                    android:id="@+id/parent_surname_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/info_row_vertical_margin"
                    android:layout_marginBottom="@dimen/info_row_vertical_margin"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:text="@string/surname_title_text"
                    android:textColor="@color/colorBlack87"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/parent_surname_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/info_row_vertical_margin"
                    android:layout_marginBottom="@dimen/info_row_vertical_margin"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="end"
                    android:textColor="@color/colorBlack87"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/parent_role_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/thin_top_border"
                android:orientation="horizontal"
                android:paddingStart="@dimen/screen_horizontal_padding"
                android:paddingEnd="@dimen/screen_horizontal_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/parent_surname_container">

                <TextView
                    android:id="@+id/parent_role_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/info_row_vertical_margin"
                    android:layout_marginBottom="@dimen/info_row_vertical_margin"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:text="@string/parent_role_title_text"
                    android:textColor="@color/colorBlack87"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/parent_role_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/info_row_vertical_margin"
                    android:layout_marginBottom="@dimen/info_row_vertical_margin"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="end"
                    android:textColor="@color/colorBlack87"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/parent_phone_num_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/thin_top_border"
                android:orientation="horizontal"
                android:paddingStart="@dimen/screen_horizontal_padding"
                android:paddingEnd="@dimen/screen_horizontal_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/parent_role_container">

                <TextView
                    android:id="@+id/parent_phone_num_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/info_row_vertical_margin"
                    android:layout_marginBottom="@dimen/info_row_vertical_margin"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:text="@string/parent_phone_num_title_text"
                    android:textColor="@color/colorBlack87"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/parent_phone_num_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/info_row_vertical_margin"
                    android:layout_marginBottom="@dimen/info_row_vertical_margin"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="end"
                    android:textColor="@color/colorBlack87"
                    android:textSize="18sp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>